# Planar

./: .gitignore  AGENTS.md  README.md  SYSTEM.md  planar-desktop.spec  pyproject.toml
.github/workflows/: windows-build.yml
agents/: agents.yaml
capture/: __init__.py  config.py  daemon.py  imu_driver.py  lidar_driver.py  server.py
desktop/: __init__.py  client.py  controller.py
docs/: ARCHITECTURE.md  CONNECT_LIDAR.md  QUICK_REFERENCE.md  REMOTE_CAPTURE.md  ROS2_SETUP.md  SDK_SETUP.md  USER_GUIDE.md  WINDOWS_PACKAGING.md
processing/: __init__.py  dxf_exporter.py  imu_processor.py  pipeline.py  pose_graph.py  scan_matcher.py  wall_extractor.py
provisioning/: capture_config.json  setup_pi.sh
provisioning/systemd/: planar-capture.service
provisioning/udev/: 99-rplidar.rules
scripts/: diagnose_hardware.py  install_rplidar_sdk.sh  probe_rplidar.sh  run_simulation.py
scripts/windows/: build-desktop.bat  build-desktop.ps1
simulation/: generate_synthetic.py
tests/: conftest.py  mocks.py  test_config.py  test_daemon.py  test_desktop.py  test_imu_driver.py  test_integration.py  test_lidar_driver.py  test_mocks.py  test_processing.py  test_server.py  test_simulator.py
webui/: app.js  index.html  styles.css
